--- a/Gori/Category_Location_Storyboard.storyboard
+++ b/Gori/Category_Location_Storyboard.storyboard
@@ -95,11 +95,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="0sx-lX-8rI">
-                                <rect key="frame" x="127" y="55" width="121" height="29"/>
+                                <rect key="frame" x="0.0" y="52" width="375" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
-                                    <segment title="First"/>
-                                    <segment title="Second"/>
+                                    <segment title="캠퍼스 주변 선택"/>
+                                    <segment title="지역별 선택"/>
                                 </segments>
                                 <connections>
                                     <action selector="districtSchoolSelection:" destination="pb7-pp-PdP" eventType="valueChanged" id="3Jn-pc-1Su"/>
